# chimarrao-platformer

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  runUT_linux.sh
src/: CMakeLists.txt  Main.cpp  main.cpp
src/animations/: CMakeLists.txt
src/animations/src/: Animation.cpp  Animation.h  AnimationDirection.h  AnimationDirectionTest.cpp  AnimationSettings.h  AnimationTest.cpp  AnimationType.h  AnimationTypeTest.cpp  AnimationsApi.h  AnimationsFromSettingsLoader.cpp  AnimationsFromSettingsLoader.h  AnimationsFromSettingsLoaderTest.cpp  Animator.h  AnimatorFactory.cpp  AnimatorFactory.h  AnimatorMock.h  AnimatorSettings.h  AnimatorSettingsReader.h  AnimatorSettingsReaderMock.h  AnimatorSettingsRepository.h  AnimatorSettingsRepositoryMock.h  AnimatorSettingsYamlReader.cpp  AnimatorSettingsYamlReader.h  AnimatorSettingsYamlReaderTest.cpp  AnimatorsSettings.h  BunnyAnimator.cpp  BunnyAnimator.h  BunnyAnimatorTest.cpp  DefaultAnimatorFactory.cpp  DefaultAnimatorFactory.h  DefaultAnimatorSettingsRepository.cpp  DefaultAnimatorSettingsRepository.h  DefaultAnimatorSettingsRepositoryTest.cpp  DruidAnimator.cpp  DruidAnimator.h  DruidAnimatorTest.cpp  MultipleFileAnimator.cpp  MultipleFileAnimator.h  MultipleFileAnimatorTest.cpp  MultipleFilesAnimationSettings.h  (+9 more)
src/audio/: CMakeLists.txt
src/audio/src/: AudioFactory.cpp  AudioFactory.h  DefaultAudioFactory.cpp  DefaultAudioFactory.h  MusicId.h  MusicIdGenerator.cpp  MusicIdGenerator.h  MusicLoader.cpp  MusicLoader.h  MusicLoaderTest.cpp  MusicManager.h  MusicManagerMock.h  MusicPath.h  MusicStorage.h  MusicStorageMock.h  SfmlMusicManager.cpp  SfmlMusicManager.h  SfmlMusicManagerTest.cpp  SfmlMusicStorage.cpp  SfmlMusicStorage.h
src/components/: CMakeLists.txt
src/components/src/: AnimationComponent.cpp  AnimationComponent.h  AnimationComponentTest.cpp  ClickableComponent.cpp  ClickableComponent.h  ClickableComponentTest.cpp  Component.h  ComponentOwner.cpp  ComponentOwner.h  ComponentOwnerTest.cpp  ComponentTest.cpp  GraphicsComponent.cpp  GraphicsComponent.h  GraphicsComponentTest.cpp  HitboxComponent.cpp  HitboxComponent.h  HitboxComponentTest.cpp  KeyAction.h  KeyboardMovementComponent.cpp  KeyboardMovementComponent.h  KeyboardMovementComponentTest.cpp  MouseOverComponent.cpp  MouseOverComponent.h  MouseOverComponentTest.cpp  TextComponent.cpp  TextComponent.h  TextComponentTest.cpp  TransformComponent.cpp  TransformComponent.h  TransformComponentTest.cpp
src/game/: CMakeLists.txt
src/game/src/: ButtonsNavigator.h  ButtonsNavigatorMock.h  CharacterFactory.cpp  CharacterFactory.h  ChooseMapState.cpp  ChooseMapState.h  ChooseMapStateTest.cpp  ChooseMapStateUIConfigBuilder.cpp  ChooseMapStateUIConfigBuilder.h  ChooseMapStateUIConfigBuilderTest.cpp  CommonUIConfigElements.h  ComponentOwnersManager.h  ComponentOwnersManagerMock.h  ControlsState.cpp  ControlsState.h  ControlsStateTest.cpp  ControlsStateUIConfigBuilder.cpp  ControlsStateUIConfigBuilder.h  ControlsStateUIConfigBuilderTest.cpp  DefaultComponentOwnersManager.cpp  DefaultComponentOwnersManager.h  DefaultComponentOwnersManagerTest.cpp  DefaultInputManager.cpp  DefaultInputManager.h  DefaultInputManagerTest.cpp  DefaultInputObservationHandler.cpp  DefaultInputObservationHandler.h  DefaultInputObservationHandlerTest.cpp  DefaultStates.cpp  DefaultStates.h  DefaultStatesTest.cpp  DefaultWorldBuilder.cpp  DefaultWorldBuilder.h  DeltaTime.h  EditorMenuState.cpp  EditorMenuState.h  EditorMenuStateTest.cpp  EditorMenuStateUIConfigBuilder.cpp  EditorMenuStateUIConfigBuilder.h  EditorMenuStateUIConfigBuilderTest.cpp  (+124 more)
src/graphics/: CMakeLists.txt
src/graphics/src/: Animation.cpp  Animation.h  AnimationDirection.h  AnimationTest.cpp  AnimationType.h  Animator.h  Color.h  ContextRenderer.h  ContextRendererMock.h  DefaultGraphicsFactory.cpp  DefaultGraphicsFactory.h  FontLoader.cpp  FontLoader.h  FontLoaderTest.cpp  FontPath.h  FontStorage.h  FontStorageMock.h  FontStorageSfml.cpp  FontStorageSfml.h  FontStorageSfmlTest.cpp  GraphicsApi.h  GraphicsFactory.cpp  GraphicsFactory.h  GraphicsId.h  GraphicsIdGenerator.cpp  GraphicsIdGenerator.h  Layer.h  LayerdShape.h  LayeredShape.h  LayeredText.h  PlayerAnimator.cpp  PlayerAnimator.h  PlayerAnimatorTest.cpp  RectangleShape.cpp  RectangleShape.h  RectangleShapeTest.cpp  RenderTargetSfml.cpp  RenderTargetSfml.h  RenderTargetSfmlTest.cpp  RendererPool.h  (+32 more)
src/gui/: CMakeLists.txt
src/gui/src/: Button.cpp  Button.h  ButtonTest.cpp  DefaultGuiFactory.cpp  DefaultGuiFactory.h  GuiFactory.cpp  GuiFactory.h  ObservableWindow.h  Window.h  WindowMock.h  WindowObserver.h  WindowObserverMock.h  WindowSfml.cpp  WindowSfml.h
src/input/: CMakeLists.txt
src/input/src/: DefaultInputManager.cpp  DefaultInputManager.h  DefaultInputManagerFactory.cpp  DefaultInputManagerFactory.h  DefaultInputManagerTest.cpp  DefaultInputObservationHandler.cpp  DefaultInputObservationHandler.h  DefaultInputObservationHandlerTest.cpp  Input.h  InputApi.h  InputKey.h  InputKeySfmlMapper.cpp  InputKeySfmlMapper.h  InputKeySfmlMapperTest.cpp  InputKeyTest.cpp  InputManager.h  InputManagerFactory.cpp  InputManagerFactory.h  InputManagerMock.h  InputMock.h  InputObservationHandler.h  InputObservationHandlerMock.h  InputObserver.h  InputObserverMock.h  InputSfml.cpp  InputSfml.h  InputSfmlTest.cpp  InputStatus.cpp  InputStatus.h  InputStatusTest.cpp  ObservableInput.h
src/physics/: CMakeLists.txt
src/physics/src/: BinaryTree.h  CollisionSystem.h  CollisionSystemFactory.cpp  CollisionSystemFactory.h  CollisionSystemMock.h  DefaultCollisionSystem.cpp  DefaultCollisionSystem.h  DefaultCollisionSystemFactory.cpp  DefaultCollisionSystemFactory.h  DefaultCollisionSystemTest.cpp  DefaultPhysicsEngine.cpp  DefaultPhysicsEngine.h  DefaultPhysicsEngineTest.cpp  DefaultPhysicsFactory.cpp  DefaultPhysicsFactory.h  DefaultQuadtree.cpp  DefaultQuadtree.h  DefaultQuadtreeTest.cpp  DefaultRayCast.cpp  DefaultRayCast.h  DefaultRayCastTest.cpp  PhysicsApi.h  PhysicsComponent.h  PhysicsEngine.h  (+20 more)
src/utils/: CMakeLists.txt
src/window/: CMakeLists.txt
(+645 files in other folders)
